# hm2-rp2040

./: CMakeLists.txt  Dockerfile.hm2-rp2040  README.md  build.sh
firmware/: CMakeLists.txt  hm2-fw.c  hm2-fw.h  hm2_fw_eth_w5500.c  idrom.c  ioport.c  lbp16.h  led.c  spi_slave.c  web_page.h
